--- a/Play-with-Machine-Learning-Algorithms-master/08-Polynomial-Regression-and-Model-Generalization/09-LASSO-Regression/09-LASSO-Regression.ipynb
+++ b/Play-with-Machine-Learning-Algorithms-master/08-Polynomial-Regression-and-Model-Generalization/09-LASSO-Regression/09-LASSO-Regression.ipynb
@@ -203,7 +203,11 @@
     }
    ],
    "source": [
-    "plot_model(lasso1_reg)"
+    "lasso1_reg = LassoRegression(20, 0.01)\n",
+    "lasso1_reg.fit(X_train, y_train)\n",
+    "\n",
+    "y1_predict = lasso1_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, y1_predict)"
    ]
   },
   {
@@ -311,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
