--- a/Play-with-Machine-Learning-Algorithms-master/12-Decision-Tree/06-Decision-Tree-Regressor/决策树.ipynb
+++ b/Play-with-Machine-Learning-Algorithms-master/12-Decision-Tree/06-Decision-Tree-Regressor/决策树.ipynb
@@ -1,18 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 决策树解决回归问题"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -22,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -37,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -48,28 +35,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Decision Tree Regressor"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "DecisionTreeRegressor(criterion='mse', max_depth=3, max_features=None,\n",
        "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
        "           min_impurity_split=None, min_samples_leaf=1,\n",
        "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
        "           presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,22 +57,22 @@
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "dt_reg = DecisionTreeRegressor()\n",
+    "dt_reg = DecisionTreeRegressor(max_depth=3)\n",
     "dt_reg.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.58605479243964098"
+       "0.5022772478725342"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.8232451684294159"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,6 +100,13 @@
    "source": [
     "dt_reg.score(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
